W-14124345: Modularize TLS module